--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -7,6 +7,7 @@ headers =
 extra_headers =
 
 sources = \
+    bobura.model.message.timetable_observer_set.cpp \
     bobura.model.serializer.bzip2_reader.cpp \
     bobura.model.serializer.bzip2_writer.cpp \
     bobura.model.serializer.exec_json_reading_task.cpp \
