--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -60,6 +60,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\bobura.model.message.timetable_observer_set.cpp" />
     <ClCompile Include="src\bobura.model.serializer.bzip2_reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.bzip2_writer.cpp" />
     <ClCompile Include="src\bobura.model.serializer.exec_json_reading_task.cpp" />
