Move the implementation of bobura::message::diagram_selection_observer_set to .cpp #99

--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="src\bobura.load_save.save_to_file.cpp" />
     <ClCompile Include="src\bobura.main_window.cpp" />
     <ClCompile Include="src\bobura.main_window_menu_builder.cpp" />
+    <ClCompile Include="src\bobura.message.diagram_selection_observer_set.cpp" />
     <ClCompile Include="src\bobura.train_kind_dialog.cpp" />
     <ClCompile Include="src\bobura.view.diagram.zoom.cpp" />
   </ItemGroup>
