--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -35,6 +35,7 @@ sources = \
     bobura.load_save.save_to_file.cpp \
     bobura.main_window.cpp \
     bobura.main_window_menu_builder.cpp \
+    bobura.message.diagram_selection_observer_set.cpp \
     bobura.train_kind_dialog.cpp \
     bobura.view.diagram.zoom.cpp
 
