--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="sources\bobura\load_save">
       <UniqueIdentifier>{ba09c701-0e46-4703-a766-15adcc7e90e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sources\bobura\message">
+      <UniqueIdentifier>{8d79d3e3-d45b-47d6-bba7-404477c60efc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\precompiled\precompiled.h">
@@ -352,6 +355,9 @@
     </ClCompile>
     <ClCompile Include="src\bobura.load_save.save_to_file.cpp">
       <Filter>sources\bobura\load_save</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.message.diagram_selection_observer_set.cpp">
+      <Filter>sources\bobura\message</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
