--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="src\bobura.main_window.cpp" />
     <ClCompile Include="src\bobura.main_window_menu_builder.cpp" />
     <ClCompile Include="src\bobura.message.diagram_selection_observer_set.cpp" />
+    <ClCompile Include="src\bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="src\bobura.train_kind_dialog.cpp" />
     <ClCompile Include="src\bobura.view.diagram.zoom.cpp" />
   </ItemGroup>
