--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -359,5 +359,8 @@
     <ClCompile Include="src\bobura.message.diagram_selection_observer_set.cpp">
       <Filter>sources\bobura\message</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.message.timetable_model_observer_set.cpp">
+      <Filter>sources\bobura\message</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
