Move the implementation of bobura::view::diagram::item to .cpp #99

--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -365,5 +365,8 @@
     <ClCompile Include="src\bobura.view.diagram.header.cpp">
       <Filter>sources\bobura\view\diagram</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.view.diagram.item.cpp">
+      <Filter>sources\bobura\view\diagram</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
