--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="src\bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="src\bobura.train_kind_dialog.cpp" />
     <ClCompile Include="src\bobura.view.diagram.header.cpp" />
+    <ClCompile Include="src\bobura.view.diagram.item.cpp" />
     <ClCompile Include="src\bobura.view.diagram.zoom.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
