--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -39,6 +39,7 @@ sources = \
     bobura.message.timetable_model_observer_set.cpp \
     bobura.train_kind_dialog.cpp \
     bobura.view.diagram.header.cpp \
+    bobura.view.diagram.item.cpp \
     bobura.view.diagram.zoom.cpp
 
 extra_sources =
