--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -40,6 +40,7 @@ sources = \
     bobura.train_kind_dialog.cpp \
     bobura.view.diagram.header.cpp \
     bobura.view.diagram.item.cpp \
+    bobura.view.diagram.selection.cpp \
     bobura.view.diagram.zoom.cpp
 
 extra_sources =
