Move the implementation of bobura::view::diagram::time_line and so on to .cpp #99

--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -42,6 +42,7 @@ sources = \
     bobura.view.diagram.item.cpp \
     bobura.view.diagram.selection.cpp \
     bobura.view.diagram.station_line.cpp \
+    bobura.view.diagram.time_line.cpp \
     bobura.view.diagram.zoom.cpp
 
 extra_sources =
