--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="src\bobura.view.diagram.item.cpp" />
     <ClCompile Include="src\bobura.view.diagram.selection.cpp" />
     <ClCompile Include="src\bobura.view.diagram.station_line.cpp" />
+    <ClCompile Include="src\bobura.view.diagram.time_line.cpp" />
     <ClCompile Include="src\bobura.view.diagram.zoom.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
