Move the implementation of bobura::view::diagram::time_to_left() and so on to .cpp #99

--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -44,6 +44,7 @@ sources = \
     bobura.view.diagram.station_line.cpp \
     bobura.view.diagram.time_line.cpp \
     bobura.view.diagram.train_line.cpp \
+    bobura.view.diagram.utility.cpp \
     bobura.view.diagram.zoom.cpp
 
 extra_sources =
