--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -380,5 +380,8 @@
     <ClCompile Include="src\bobura.view.diagram.train_line.cpp">
       <Filter>sources\bobura\view\diagram</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.view.diagram.utility.cpp">
+      <Filter>sources\bobura\view\diagram</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
