Move the implementation of bobura::view::scale_list to .cpp #99

--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -383,5 +383,8 @@
     <ClCompile Include="src\bobura.view.diagram.utility.cpp">
       <Filter>sources\bobura\view\diagram</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.view.scale_list.cpp">
+      <Filter>sources\bobura\view</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
