--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -215,6 +215,7 @@
     <ClCompile Include="src\bobura.view.diagram.train_line.cpp" />
     <ClCompile Include="src\bobura.view.diagram.utility.cpp" />
     <ClCompile Include="src\bobura.view.diagram.zoom.cpp" />
+    <ClCompile Include="src\bobura.view.scale_list.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
