--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -386,5 +386,8 @@
     <ClCompile Include="src\bobura.view.scale_list.cpp">
       <Filter>sources\bobura\view</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.diagram_picture_box.cpp">
+      <Filter>sources\bobura</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
