--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -27,6 +27,7 @@ sources = \
     bobura.command.train_kind.cpp \
     bobura.command.vertically_zoom_in.cpp \
     bobura.command.vertically_zoom_out.cpp \
+    bobura.diagram_picture_box.cpp \
     bobura.file_property_dialog.cpp \
     bobura.font_color_dialog.cpp \
     bobura.load_save.confirm_file_save.cpp \
