Move the implementation of bobura::diagram_view to .cpp #99

--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="src\bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="src\bobura.command.vertically_zoom_out.cpp" />
     <ClCompile Include="src\bobura.diagram_picture_box.cpp" />
+    <ClCompile Include="src\bobura.diagram_view.cpp" />
     <ClCompile Include="src\bobura.file_property_dialog.cpp" />
     <ClCompile Include="src\bobura.font_color_dialog.cpp" />
     <ClCompile Include="src\bobura.load_save.confirm_file_save.cpp" />
