Move the implementation of bobura::property_bar to .cpp #99

--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -392,5 +392,8 @@
     <ClCompile Include="src\bobura.diagram_view.cpp">
       <Filter>sources\bobura</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.property_bar.cpp">
+      <Filter>sources\bobura</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
