--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -39,6 +39,7 @@ sources = \
     bobura.main_window_menu_builder.cpp \
     bobura.message.diagram_selection_observer_set.cpp \
     bobura.message.timetable_model_observer_set.cpp \
+    bobura.property_bar.cpp \
     bobura.train_kind_dialog.cpp \
     bobura.view.diagram.header.cpp \
     bobura.view.diagram.item.cpp \
