Move the implementation of bobura::timetable_model to .cpp #99

--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -398,5 +398,8 @@
     <ClCompile Include="src\bobura.settings.cpp">
       <Filter>sources\bobura</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.timetable_model.cpp">
+      <Filter>sources\bobura</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
