--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="src\bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="src\bobura.property_bar.cpp" />
     <ClCompile Include="src\bobura.settings.cpp" />
+    <ClCompile Include="src\bobura.timetable_model.cpp" />
     <ClCompile Include="src\bobura.train_kind_dialog.cpp" />
     <ClCompile Include="src\bobura.view.diagram.header.cpp" />
     <ClCompile Include="src\bobura.view.diagram.item.cpp" />
