--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -122,7 +122,6 @@
     <ClCompile Include="test\test_bobura.command.train_kind.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_out.cpp" />
-    <ClCompile Include="test\test_bobura.diagram_picture_box.cpp" />
     <ClCompile Include="test\test_bobura.diagram_view.cpp" />
     <ClCompile Include="test\test_bobura.file_property_dialog.cpp" />
     <ClCompile Include="test\test_bobura.font_color_dialog.cpp" />
@@ -133,9 +132,7 @@
     <ClCompile Include="test\test_bobura.main_window.cpp" />
     <ClCompile Include="test\test_bobura.main_window_menu_builder.cpp" />
     <ClCompile Include="test\test_bobura.message.about_dialog.cpp" />
-    <ClCompile Include="test\test_bobura.message.diagram_picture_box.cpp" />
     <ClCompile Include="test\test_bobura.message.diagram_selection_observer_set.cpp" />
-    <ClCompile Include="test\test_bobura.message.diagram_view.cpp" />
     <ClCompile Include="test\test_bobura.message.file_property_dialog.cpp" />
     <ClCompile Include="test\test_bobura.message.font_color_dialog.cpp" />
     <ClCompile Include="test\test_bobura.message.main_window.cpp" />
@@ -143,6 +140,7 @@
     <ClCompile Include="test\test_bobura.message.timetable_model.cpp" />
     <ClCompile Include="test\test_bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="test\test_bobura.message.train_kind_dialog.cpp" />
+    <ClCompile Include="test\test_bobura.message.view_picture_box.cpp" />
     <ClCompile Include="test\test_bobura.property_bar.cpp" />
     <ClCompile Include="test\test_bobura.settings.cpp" />
     <ClCompile Include="test\test_bobura.timetable_model.cpp" />
@@ -156,6 +154,7 @@
     <ClCompile Include="test\test_bobura.view.diagram.utility.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.zoom.cpp" />
     <ClCompile Include="test\test_bobura.view.scale_list.cpp" />
+    <ClCompile Include="test\test_bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res.test\win32\bobura_core.test.exe.manifest" />
