--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -87,12 +87,6 @@
     <ClInclude Include="include\bobura\load_save\confirm_file_save.h">
       <Filter>headers\bobura\load_save</Filter>
     </ClInclude>
-    <ClInclude Include="include\bobura\message\diagram_picture_box.h">
-      <Filter>headers\bobura\message</Filter>
-    </ClInclude>
-    <ClInclude Include="include\bobura\diagram_picture_box.h">
-      <Filter>headers\bobura</Filter>
-    </ClInclude>
     <ClInclude Include="include\bobura\message\diagram_selection_observer_set.h">
       <Filter>headers\bobura\message</Filter>
     </ClInclude>
@@ -261,6 +255,12 @@
     <ClInclude Include="include\bobura\main_window_menu_builder_traits.h">
       <Filter>headers\bobura</Filter>
     </ClInclude>
+    <ClInclude Include="include\bobura\message\view_picture_box.h">
+      <Filter>headers\bobura\message</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bobura\view_picture_box.h">
+      <Filter>headers\bobura</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\precompiled\precompiled.cpp">
@@ -386,9 +386,6 @@
     <ClCompile Include="src\bobura.view.scale_list.cpp">
       <Filter>sources\bobura\view</Filter>
     </ClCompile>
-    <ClCompile Include="src\bobura.diagram_picture_box.cpp">
-      <Filter>sources\bobura</Filter>
-    </ClCompile>
     <ClCompile Include="src\bobura.diagram_view.cpp">
       <Filter>sources\bobura</Filter>
     </ClCompile>
@@ -399,6 +396,9 @@
       <Filter>sources\bobura</Filter>
     </ClCompile>
     <ClCompile Include="src\bobura.timetable_model.cpp">
+      <Filter>sources\bobura</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.view_picture_box.cpp">
       <Filter>sources\bobura</Filter>
     </ClCompile>
   </ItemGroup>
