--- a/bobura_core/include/bobura/Makefile.am
+++ b/bobura_core/include/bobura/Makefile.am
@@ -22,6 +22,8 @@ pkg_headers = \
     command/set_horizontal_scale.h \
     command/set_traits.h \
     command/set_vertical_scale.h \
+    command/show_diagram.h \
+    command/show_timetable.h \
     command/train_kind.h \
     command/traits.h \
     command/vertically_zoom_in.h \
