--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -25,6 +25,8 @@ sources = \
     test_bobura.command.set.cpp \
     test_bobura.command.set_horizontal_scale.cpp \
     test_bobura.command.set_vertical_scale.cpp \
+    test_bobura.command.show_diagram.cpp \
+    test_bobura.command.show_timetable.cpp \
     test_bobura.command.train_kind.cpp \
     test_bobura.command.vertically_zoom_in.cpp \
     test_bobura.command.vertically_zoom_out.cpp \
