--- a/bobura_core/bobura_core.test.vcxproj.filters
+++ b/bobura_core/bobura_core.test.vcxproj.filters
@@ -209,6 +209,9 @@
     <ClCompile Include="test\test_bobura.command.show_timetable.cpp">
       <Filter>sources\test_bobura\command</Filter>
     </ClCompile>
+    <ClCompile Include="test\test_bobura.timetable_view.cpp">
+      <Filter>sources\test_bobura</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="res.test\win32\bobura_core.test.exe.manifest">
