--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -49,7 +49,8 @@ sources = \
     test_bobura.message.timetable_model.cpp \
     test_bobura.message.timetable_model_observer_set.cpp \
     test_bobura.message.train_kind_dialog.cpp \
-    test_bobura.message.view_picture_box.cpp \
+    test_bobura.message.view_picture_box.diagram.cpp \
+    test_bobura.message.view_picture_box.timetable.cpp \
     test_bobura.property_bar.cpp \
     test_bobura.settings.cpp \
     test_bobura.timetable_model.cpp \
