--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -142,7 +142,8 @@
     <ClCompile Include="test\test_bobura.message.timetable_model.cpp" />
     <ClCompile Include="test\test_bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="test\test_bobura.message.train_kind_dialog.cpp" />
-    <ClCompile Include="test\test_bobura.message.view_picture_box.cpp" />
+    <ClCompile Include="test\test_bobura.message.view_picture_box.diagram.cpp" />
+    <ClCompile Include="test\test_bobura.message.view_picture_box.timetable.cpp" />
     <ClCompile Include="test\test_bobura.property_bar.cpp" />
     <ClCompile Include="test\test_bobura.settings.cpp" />
     <ClCompile Include="test\test_bobura.timetable_model.cpp" />
