--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -153,7 +153,8 @@
     <ClInclude Include="include\bobura\message\timetable_model.h" />
     <ClInclude Include="include\bobura\message\timetable_model_observer_set.h" />
     <ClInclude Include="include\bobura\message\train_kind_dialog.h" />
-    <ClInclude Include="include\bobura\message\view_picture_box.h" />
+    <ClInclude Include="include\bobura\message\view_picture_box\diagram.h" />
+    <ClInclude Include="include\bobura\message\view_picture_box\timetable.h" />
     <ClInclude Include="include\bobura\property_bar.h" />
     <ClInclude Include="include\bobura\settings.h" />
     <ClInclude Include="include\bobura\timetable_model.h" />
@@ -230,6 +231,7 @@
     <ClCompile Include="src\bobura.view_picture_box.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="include\bobura\message\view_picture_box\0namespace.dox" />
     <None Include="include\bobura\view\timetable\0namespace.dox" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
