--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -120,7 +120,7 @@
     <ClCompile Include="test\test_bobura.command.set_horizontal_scale.cpp" />
     <ClCompile Include="test\test_bobura.command.set_vertical_scale.cpp" />
     <ClCompile Include="test\test_bobura.command.show_diagram.cpp" />
-    <ClCompile Include="test\test_bobura.command.show_timetable.cpp" />
+    <ClCompile Include="test\test_bobura.command.show_timetable_down.cpp" />
     <ClCompile Include="test\test_bobura.command.train_kind.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_out.cpp" />
