--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -121,7 +121,7 @@
     <ClInclude Include="include\bobura\command\set_traits.h" />
     <ClInclude Include="include\bobura\command\set_vertical_scale.h" />
     <ClInclude Include="include\bobura\command\show_diagram.h" />
-    <ClInclude Include="include\bobura\command\show_timetable.h" />
+    <ClInclude Include="include\bobura\command\show_timetable_down.h" />
     <ClInclude Include="include\bobura\command\train_kind.h" />
     <ClInclude Include="include\bobura\command\traits.h" />
     <ClInclude Include="include\bobura\command\vertically_zoom_in.h" />
@@ -199,7 +199,7 @@
     <ClCompile Include="src\bobura.command.set_horizontal_scale.cpp" />
     <ClCompile Include="src\bobura.command.set_vertical_scale.cpp" />
     <ClCompile Include="src\bobura.command.show_diagram.cpp" />
-    <ClCompile Include="src\bobura.command.show_timetable.cpp" />
+    <ClCompile Include="src\bobura.command.show_timetable_down.cpp" />
     <ClCompile Include="src\bobura.command.train_kind.cpp" />
     <ClCompile Include="src\bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="src\bobura.command.vertically_zoom_out.cpp" />
