--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -267,9 +267,6 @@
     <ClInclude Include="include\bobura\command\show_diagram.h">
       <Filter>headers\bobura\command</Filter>
     </ClInclude>
-    <ClInclude Include="include\bobura\command\show_timetable.h">
-      <Filter>headers\bobura\command</Filter>
-    </ClInclude>
     <ClInclude Include="include\bobura\view\timetable\traits.h">
       <Filter>headers\bobura\view\timetable</Filter>
     </ClInclude>
@@ -281,6 +278,9 @@
     </ClInclude>
     <ClInclude Include="include\bobura\message\view_picture_box\timetable.h">
       <Filter>headers\bobura\message\view_picture_box</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bobura\command\show_timetable_down.h">
+      <Filter>headers\bobura\command</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -425,11 +425,11 @@
     <ClCompile Include="src\bobura.command.show_diagram.cpp">
       <Filter>sources\bobura\command</Filter>
     </ClCompile>
-    <ClCompile Include="src\bobura.command.show_timetable.cpp">
-      <Filter>sources\bobura\command</Filter>
-    </ClCompile>
     <ClCompile Include="src\bobura.timetable_view.cpp">
       <Filter>sources\bobura</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bobura.command.show_timetable_down.cpp">
+      <Filter>sources\bobura\command</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
