Create bobura::command::show_timetable_up #102

--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="test\test_bobura.command.set_vertical_scale.cpp" />
     <ClCompile Include="test\test_bobura.command.show_diagram.cpp" />
     <ClCompile Include="test\test_bobura.command.show_timetable_down.cpp" />
+    <ClCompile Include="test\test_bobura.command.show_timetable_up.cpp" />
     <ClCompile Include="test\test_bobura.command.train_kind.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="test\test_bobura.command.vertically_zoom_out.cpp" />
