--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="include\bobura\command\set_vertical_scale.h" />
     <ClInclude Include="include\bobura\command\show_diagram.h" />
     <ClInclude Include="include\bobura\command\show_timetable_down.h" />
+    <ClInclude Include="include\bobura\command\show_timetable_up.h" />
     <ClInclude Include="include\bobura\command\train_kind.h" />
     <ClInclude Include="include\bobura\command\traits.h" />
     <ClInclude Include="include\bobura\command\vertically_zoom_in.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="src\bobura.command.set_vertical_scale.cpp" />
     <ClCompile Include="src\bobura.command.show_diagram.cpp" />
     <ClCompile Include="src\bobura.command.show_timetable_down.cpp" />
+    <ClCompile Include="src\bobura.command.show_timetable_up.cpp" />
     <ClCompile Include="src\bobura.command.train_kind.cpp" />
     <ClCompile Include="src\bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="src\bobura.command.vertically_zoom_out.cpp" />
