--- a/vsprops/installer_bobura.props
+++ b/vsprops/installer_bobura.props
@@ -3,12 +3,18 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <NMakeBuildCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
+    <NMakeBuildCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "EMBEDTRANSFORM_DIR"
+set PATH=$(Path);$(WIX)\bin;%SOLUTION_CONFIG%
+call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
 nmake CONFIGURATION=$(Configuration) PLATFORM=$(Platform) ARCH=$(PlatformTarget) VC_VERSION=$(PlatformToolsetVersion) BOOST_VERSION="%SOLUTION_CONFIG%" /nologo /f Makefile.nmake
 </NMakeBuildCommandLine>
-    <NMakeReBuildCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
+    <NMakeReBuildCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "EMBEDTRANSFORM_DIR"
+set PATH=$(Path);$(WIX)\bin;%SOLUTION_CONFIG%
+call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
 nmake CONFIGURATION=$(Configuration) PLATFORM=$(Platform) ARCH=$(PlatformTarget) VC_VERSION=$(PlatformToolsetVersion) BOOST_VERSION="%SOLUTION_CONFIG%" /nologo /f Makefile.nmake clean all</NMakeReBuildCommandLine>
-    <NMakeCleanCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
+    <NMakeCleanCommandLine>call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "EMBEDTRANSFORM_DIR"
+set PATH=$(Path);$(WIX)\bin;%SOLUTION_CONFIG%
+call "$(SolutionDir)lib\tetengo2\tools\get_solution_config.bat" "$(SolutionDir)bobura_config.h" "BOOST_VERSION"
 nmake CONFIGURATION=$(Configuration) PLATFORM=$(Platform) ARCH=$(PlatformTarget) VC_VERSION=$(PlatformToolsetVersion) BOOST_VERSION="%SOLUTION_CONFIG%" /nologo /f Makefile.nmake clean</NMakeCleanCommandLine>
     <NMakeOutput>$(OutDir)bobura.$(Platform).msi</NMakeOutput>
   </PropertyGroup>
